Refactored some small things

--- a/src/Topycs/Bundle/WebBundle/Resources/views/Index/index.html.twig
+++ b/src/Topycs/Bundle/WebBundle/Resources/views/Index/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'TopycsWebBundle:Layout:layout.html.twig' %}
 
-{% block body %}
-ola
+{% block content %}
+    
+    
+    
 {% endblock %}
