Created list latest page

--- a/src/Topycs/Bundle/WebBundle/Resources/views/Thread/listByCategory.html.twig
+++ b/src/Topycs/Bundle/WebBundle/Resources/views/Thread/listByCategory.html.twig
@@ -1,4 +1,4 @@
-<div class="threads">
+<div class="threads by-category">
     {% for thread in threads %}
         <div class="thread">
             <div class="title">
