--- a/src/Topycs/Bundle/WebBundle/Resources/views/Layout/layout.html.twig
+++ b/src/Topycs/Bundle/WebBundle/Resources/views/Layout/layout.html.twig
@@ -120,7 +120,7 @@
     </section>
 </nav>
     
-    <div class="row">
+    <div class="large-12 columns">
         {% block content %}{% endblock %}
     </div>
     
