Changed way of showing threads to table

--- a/src/Topycs/Bundle/WebBundle/Resources/views/Layout/layout.html.twig
+++ b/src/Topycs/Bundle/WebBundle/Resources/views/Layout/layout.html.twig
@@ -120,8 +120,10 @@
     </section>
 </nav>
     
-    <div class="large-12 columns">
-        {% block content %}{% endblock %}
+    <div class="row">
+        <div class="large-12 medium-8 columns">
+            {% block content %}{% endblock %}
+        </div>
     </div>
     
     <!-- TODO: separate this into different template -->
