--- a/src/Topycs/Bundle/WebBundle/Resources/views/Thread/listByCategory.html.twig
+++ b/src/Topycs/Bundle/WebBundle/Resources/views/Thread/listByCategory.html.twig
@@ -1,13 +1,21 @@
-<div class="threads by-category">
+<h2>{{ category.name }}</h2>
+<p>{{ category.description }}</p>
+
+<table width="100%">
+    <thead>
+    <tr>
+        <th width="60%">Title</th>
+        <th width="20%">Posts</th>
+        <th width="20%">Activity</th>
+    </tr>
+    </thead>
+    <tbody>
     {% for thread in threads %}
-        <div class="thread">
-            <div class="title">
-                <h3>{{ thread.title }}</h3>
-            </div>
-            <div class="info">
-                <span class="posts">{{ thread.posts|length }} {{ 'thread.posts'|trans }}</span>
-                <span class="views">0 {{ 'thread.views'|trans }}</span>
-            </div>
-        </div>
+        <tr>
+            <td><a href="">{{ thread.title }}</a></td>
+            <td>{{ thread.posts|length }}</td>
+            <td>0 {{ 'thread.views'|trans }}</td>
+        </tr>
     {% endfor %}
-</div>
+    </tbody>
+</table>
