Second part of major refactoring after major fail

--- a/src/Topycs/DiscussionPlatformBundle/Resources/views/Default/index.html.twig
+++ b/src/Topycs/DiscussionPlatformBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,7 @@
-Hello {{ name }}!
+{% extends 'TopycsDiscussionPlatformBundle:Layout:layout.html.twig' %}
+
+{% block content %}
+
+
+
+{% endblock %}
