--- a/src/Topycs/DiscussionPlatformBundle/Resources/views/Category/listThreads.html.twig
+++ b/src/Topycs/DiscussionPlatformBundle/Resources/views/Category/listThreads.html.twig
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-    {{ render(controller('topycs.controller.thread:listByCategoryAction', {category: category})) }}
+    {{ render(controller('TopycsDiscussionPlatformBundle:Thread:listByCategory', {category: category})) }}
 
 {% endblock %}
