--- a/src/Topycs/DiscussionPlatformBundle/Resources/views/Index/latest.html.twig
+++ b/src/Topycs/DiscussionPlatformBundle/Resources/views/Index/latest.html.twig
@@ -1,7 +1,7 @@
-{% extends 'TopycsWebBundle:Layout:layout.html.twig' %}
+{% extends 'TopycsDiscussionPlatformBundle:Layout:layout.html.twig' %}
 
 {% block content %}
     
-    {{ render(controller('topycs.controller.thread:listLatestAction')) }}
+    {{ render(controller('TopycsDiscussionPlatformBundle:Thread:listLatest')) }}
     
 {% endblock %}
